--- a/exams/midterm_22-11-2024.ipynb
+++ b/exams/midterm_22-11-2024.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 1,
    "id": "247356f0",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 2,
    "id": "d44eec2f",
    "metadata": {},
    "outputs": [
@@ -73,7 +73,7 @@
        "[   0.5,  0.7071,     0.5]])"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 3,
    "id": "a0eed0ed",
    "metadata": {},
    "outputs": [
@@ -120,7 +120,7 @@
        "[0.3536,  -0.067,   0.933]])"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 4,
    "id": "7a366964",
    "metadata": {},
    "outputs": [
@@ -162,7 +162,7 @@
        "[ 0.3598,  -0.87, 0.3371]])"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 5,
    "id": "216e0c66",
    "metadata": {},
    "outputs": [
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 6,
    "id": "864d8f8e",
    "metadata": {},
    "outputs": [],
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 7,
    "id": "ea32203b",
    "metadata": {},
    "outputs": [
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 8,
    "id": "7826fc59",
    "metadata": {},
    "outputs": [
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 9,
    "id": "84b1f36f",
    "metadata": {},
    "outputs": [
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 10,
    "id": "640ff8dd",
    "metadata": {},
    "outputs": [
@@ -376,7 +376,7 @@
        "[0, 0, 0,   1]])"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 11,
    "id": "2cb0a672",
    "metadata": {},
    "outputs": [
@@ -417,7 +417,7 @@
        "[         0,           0, 0, 1]])"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 12,
    "id": "30af8517",
    "metadata": {},
    "outputs": [
@@ -456,7 +456,7 @@
        "[         0,           0, 0, 1]])"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 13,
    "id": "0f23b6a7",
    "metadata": {},
    "outputs": [
@@ -493,7 +493,7 @@
        "[       0,         0, 0, 1]])"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 14,
    "id": "985775a7",
    "metadata": {},
    "outputs": [
@@ -537,7 +537,7 @@
        "[                                                       0,                                                        0,          0,                              1]])"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 15,
    "id": "eeace832",
    "metadata": {},
    "outputs": [
@@ -567,7 +567,7 @@
        "[      0,       0,     0,    1.0]])"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -612,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 16,
    "id": "ec930a94",
    "metadata": {},
    "outputs": [
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 17,
    "id": "8f4274b5",
    "metadata": {},
    "outputs": [
@@ -679,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 18,
    "id": "23fda644",
    "metadata": {},
    "outputs": [
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 19,
    "id": "dc37c926",
    "metadata": {},
    "outputs": [
@@ -738,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 20,
    "id": "f74764c5",
    "metadata": {},
    "outputs": [
@@ -767,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 21,
    "id": "63ececc8",
    "metadata": {},
    "outputs": [
@@ -857,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 22,
    "id": "ed418a15",
    "metadata": {},
    "outputs": [
@@ -882,7 +882,7 @@
        "2  L      0    0    q_3   REVOLUTE"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -893,15 +893,15 @@
     "        JointType.PRISMATIC,\n",
     "        JointType.REVOLUTE,\n",
     "    ]\n",
-    "# a\n",
-    "link_lengths = [0, 0, sympy.symbols(\"L\")]\n",
+    "\n",
+    "x_offsets = [0, 0, sympy.symbols(\"L\")]\n",
     "# alpha\n",
-    "link_twists = [-sympy.pi / 2, -sympy.pi / 2, 0]\n",
+    "x_rotations = [-sympy.pi / 2, -sympy.pi / 2, 0]\n",
     "man = Manipulator(\n",
-    "    link_lengths=link_lengths,\n",
-    "    link_twists=link_twists,\n",
+    "    x_offsets=x_offsets,\n",
+    "    x_rotations=x_rotations,\n",
     "    joint_types=joint_types,\n",
-    "    theta_offsets=[0.0, -sympy.pi / 2, 0],\n",
+    "    z_rotations=[0.0, -sympy.pi / 2, 0],\n",
     ")\n",
     "man.dh_table()\n",
     "\n"
@@ -909,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 23,
    "id": "cc97ddee",
    "metadata": {},
    "outputs": [
@@ -926,7 +926,7 @@
        "[        0,         0,   0,               1.0]])"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -937,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 24,
    "id": "438bc72d",
    "metadata": {},
    "outputs": [
@@ -953,7 +953,7 @@
        "[1.0,   0,   0]])"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -965,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 25,
    "id": "834977b5",
    "metadata": {},
    "outputs": [
@@ -981,7 +981,7 @@
        "[1.0,    0,   0]])"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -993,7 +993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 26,
    "id": "aa844120",
    "metadata": {},
    "outputs": [
@@ -1010,7 +1010,7 @@
        "[  0,            0,             0,                       1.0]])"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1079,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 27,
    "id": "aa3a6af1",
    "metadata": {},
    "outputs": [
@@ -1174,7 +1174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 28,
    "id": "b46f88d4",
    "metadata": {},
    "outputs": [
@@ -1215,7 +1215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 29,
    "id": "ad16c013",
    "metadata": {},
    "outputs": [
@@ -1245,7 +1245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 30,
    "id": "e38c457c",
    "metadata": {},
    "outputs": [
@@ -1266,7 +1266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 31,
    "id": "0eb2f894",
    "metadata": {},
    "outputs": [
@@ -1288,7 +1288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 32,
    "id": "5103c76e",
    "metadata": {},
    "outputs": [
@@ -1310,7 +1310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 33,
    "id": "4c87683d",
    "metadata": {},
    "outputs": [
@@ -1332,7 +1332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 34,
    "id": "6c5a670e",
    "metadata": {},
    "outputs": [
@@ -1359,14 +1359,14 @@
        "3  L     0    0   q_4   REVOLUTE"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "link_twists = [ 0, sympy.pi/2, 0,0]\n",
-    "link_lengths = [0,0,0,sympy.symbols(\"L\")]\n",
+    "x_rotations = [ 0, sympy.pi/2, 0,0]\n",
+    "x_offsets = [0,0,0,sympy.symbols(\"L\")]\n",
     "joint_types =[\n",
     "    JointType.REVOLUTE,\n",
     "    JointType.PRISMATIC,\n",
@@ -1375,8 +1375,8 @@
     "\n",
     "]\n",
     "man = Manipulator(\n",
-    "    link_lengths= link_lengths,\n",
-    "    link_twists = link_twists,\n",
+    "    x_offsets=x_offsets,\n",
+    "    x_rotations=x_rotations,\n",
     "    joint_types=joint_types\n",
     ")\n",
     "man.dh_table() # Should match the provided by the excercise"
@@ -1384,7 +1384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 35,
    "id": "c31e685e",
    "metadata": {},
    "outputs": [
@@ -1401,7 +1401,7 @@
        "[                0,                  0,         0,                                1.0]])"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1413,11 +1413,114 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b5033f1e",
+   "cell_type": "markdown",
+   "id": "5114b86d",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "Solving the inverse kinematic problem consists of determining the joint variables associated to a specific end-effector position.\n",
+    "There are two ways to solve this problem:\n",
+    "\n",
+    "- Analytical solution: the result is a closed form system of equations, it can be found via geometric inspection and through algebraic methods\n",
+    "- Numerical solution: is found through the use of an iterative approach\n",
+    "\n",
+    "As far as the analytical solution goes, we can employ some algebraic manipulations, keeping in mind that $\\bold{r}(p_x,p_y,p_z)$ are known.\n",
+    "First we can easily see that: \n",
+    "\n",
+    "$$\n",
+    "q_4 = \\alpha\n",
+    "$$\n",
+    "\n",
+    "Now we can substitute in the other equations:\n",
+    "\n",
+    "$$\n",
+    "p_x = L cos(q_1)cos(\\alpha) + q_3 sin(q_1) \\\\\n",
+    "p_y = L sin(q_1)cos(\\alpha) - q_3 cos(q_1) \\\\\n",
+    "p_z = L sin(\\alpha) + q_2 \\\\\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f0768576",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "q_2 = p_z - L sin(\\alpha)\n",
+    "$$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6c3e3b5c",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "p_x + p_y = L cos(\\alpha) (cos(q_1) + sin(q_1)) + q_3 (sin(q_1) - cos(q_1))\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca10aa82",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "p_x^2 = L^2 cos(q_1)^2 cos(\\alpha)^2 + 2 L q_3 cos(q_1)cos(\\alpha)sin(q_1) + q_3^2 sin(q_1) ^2 \\\\\n",
+    "p_y^2 = L^2 sin(q_1)^2 cos(\\alpha)^2 - 2 L q_3 sin(q_1)cos(\\alpha)cos(q_1) + q_3^2 cos(q_1) ^2 \\\\\n",
+    "p_x^2 + p_y^2 = L^2 cos(\\alpha)^2 + q_3 ^2\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "08b87e28",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "q_3 = \\pm \\sqrt{p_x^2 + p_y^2 - L^2 cos(\\alpha)^2}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "56ec96df",
+   "metadata": {},
+   "source": [
+    "For the same end-effector position and orientation there can be two configurations of the robot arm:\n",
+    "\n",
+    "- One where the joint $q_3$ moves forward\n",
+    "- One where the joint $q_3$ moves backward\n",
+    "\n",
+    "That results in the same overall result.\n",
+    "This ambiguity comes from the special relationship that $q_1$ and $q_3$ have.\n",
+    "In particular the position along $x$ and $y$ is expressed as a combination of a rotation followed by a translation.\n",
+    "Both terms contain a trigonometric term in $q_1$ and a linear term in $q_3$.\n",
+    "\n",
+    "The critical insight is that $q_3$ is computed as either a positive or negative root of a squared quantity. This implies that two values of exist, symmetric around zero, each associated with a different value of to preserve the correct direction of the vector in the plane. Geometrically, these represent two distinct configurations: one where the robot rotates to face the target point and extends positively along its frame, and one where the robot rotates in the opposite direction and extends negatively — yet both reach the same end-effector position in space.\n",
+    "Now we go back to the equations:\n",
+    "\n",
+    "$$\n",
+    "p_x = L cos(q_1)cos(\\alpha) + q_3 sin(q_1) \\\\\n",
+    "p_y = L sin(q_1)cos(\\alpha) - q_3 cos(q_1) \\\\\n",
+    "$$\n",
+    "\n",
+    "By treating $q_1$ as unknown we can write it as a linear system.\n",
+    "\n",
+    "$$\n",
+    "\\begin{pmatrix} L \\cos \\alpha_d & q_3^{+,-} \\\\ - q_3^{+,-} & L \\cos \\alpha_d \\end{pmatrix} \\begin{pmatrix} \\cos q_1 \\\\ \\sin q_1 \\end{pmatrix} = \\begin{pmatrix} p_{xd} \\\\ p_{yd} \\end{pmatrix}\n",
+    "$$\n",
+    "\n",
+    "But instead of solving the linear system symbolically and then dividing, we take advantage of a shortcut.\n",
+    "\n",
+    "$$\n",
+    "q_1^{\\pm} =  atan2(sin(q_1),cos(q_1))\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "db09a74d",
+   "metadata": {},
    "source": []
   }
  ],
