Cleaned up type notation in transformations

--- a/exams/midterm_22-11-2024.ipynb
+++ b/exams/midterm_22-11-2024.ipynb
@@ -1514,7 +1514,15 @@
     "\n",
     "$$\n",
     "q_1^{\\pm} =  atan2(sin(q_1),cos(q_1))\n",
-    "$$"
+    "$$\n",
+    "\n",
+    "Under the condition that the determinant is not zero, or else this system has no solution.\n",
+    "In this case it must be true that\n",
+    "\n",
+    "$$\n",
+    "Lcos(\\alpha) = 0 \\quad \\text{and} \\quad q_3 =0\n",
+    "$$\n",
+    "\n"
    ]
   },
   {
