reimplemented the inverse euler

--- a/exams/midterm_18-11-2022.ipynb
+++ b/exams/midterm_18-11-2022.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "caa6fd45",
    "metadata": {},
    "outputs": [],
@@ -27,6 +27,7 @@
     "    HomogeneousTransformation,\n",
     "    Rotation,\n",
     "    AxisAngleSpec,\n",
+    "    \n",
     ")"
    ]
   },
@@ -40,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "1d660099",
    "metadata": {},
    "outputs": [
@@ -56,7 +57,7 @@
        "[-0.333333333333333, -0.666666666666667, -0.666666666666667]])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,25 +73,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "08867bc4",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pi\n",
-      "0\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "AxisAngleSpec(axis=Axis(0.408248290463863, 0.816496580927726, 0.408248290463863), theta=pi)"
+       "(AxisAngleSpec(self.axis=Axis(-0.408248290463863, -0.816496580927726, 0.408248290463863),self.theta=pi),\n",
+       " AxisAngleSpec(self.axis=Axis(0.408248290463863, 0.816496580927726, -0.408248290463863),self.theta=pi))"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,58 +96,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "id": "e1c76040",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/latex": [
-       "$\\displaystyle \\left[\\begin{matrix}-0.666666666666667 & 0.666666666666667 & 0.333333333333333\\\\0.666666666666667 & 0.333333333333333 & 0.666666666666667\\\\0.333333333333333 & 0.666666666666667 & -0.666666666666667\\end{matrix}\\right]$"
-      ],
       "text/plain": [
-       "Matrix([\n",
-       "[-0.666666666666667, 0.666666666666667,  0.333333333333333],\n",
-       "[ 0.666666666666667, 0.333333333333333,  0.666666666666667],\n",
-       "[ 0.333333333333333, 0.666666666666667, -0.666666666666667]])"
+       "True"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Rotation.from_axis_angle(r_d_axis_spec)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "35770315",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "AxisAngleSpec(axis=Axis(-0.408248290463863, -0.816496580927726, -0.408248290463863), theta=pi)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "nr_d_axis_spec = AxisAngleSpec(-r_d_axis_spec.axis,r_d_axis_spec.theta)\n",
-    "Rotation.from_axis_angle(nr_d_axis_spec)\n",
-    "nr_d_axis_spec"
+    "r = Rotation.from_axis_angle(r_d_axis_spec)\n",
+    "r.round() == r_d .round()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40595e30",
+   "id": "2e3ee163",
    "metadata": {},
    "outputs": [],
    "source": []
