--- a/exams/midterm_15-11-2023.ipynb
+++ b/exams/midterm_15-11-2023.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "id": "a4822a53",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "id": "c748114f",
    "metadata": {},
    "outputs": [],
@@ -53,35 +53,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "346ab6ff",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\left[\\begin{matrix}\\cos{\\left(\\alpha \\right)} \\cos{\\left(\\beta \\right)} & - \\sin{\\left(\\alpha \\right)} & \\sin{\\left(\\beta \\right)} \\cos{\\left(\\alpha \\right)}\\\\\\sin{\\left(\\alpha \\right)} \\cos{\\left(\\beta \\right)} & \\cos{\\left(\\alpha \\right)} & \\sin{\\left(\\alpha \\right)} \\sin{\\left(\\beta \\right)}\\\\- \\sin{\\left(\\beta \\right)} & 0 & \\cos{\\left(\\beta \\right)}\\end{matrix}\\right]$"
-      ],
-      "text/plain": [
-       "Matrix([\n",
-       "[cos(alpha)*cos(beta), -sin(alpha), sin(beta)*cos(alpha)],\n",
-       "[sin(alpha)*cos(beta),  cos(alpha), sin(alpha)*sin(beta)],\n",
-       "[          -sin(beta),           0,            cos(beta)]])"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "TypeError",
+     "evalue": "Rotation.from_axis_angle() takes 1 positional argument but 2 were given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m r_1 = \u001b[43mRotation\u001b[49m\u001b[43m.\u001b[49m\u001b[43mfrom_axis_angle\u001b[49m\u001b[43m(\u001b[49m\u001b[43mZ\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43malpha\u001b[49m\u001b[43m)\u001b[49m @ Rotation.from_axis_angle(Y, beta)\n\u001b[32m      2\u001b[39m r_1\n",
+      "\u001b[31mTypeError\u001b[39m: Rotation.from_axis_angle() takes 1 positional argument but 2 were given"
+     ]
     }
    ],
    "source": [
-    "r_1 = Rotation.from_axis_angle(Z, alpha) @ Rotation.from_axis_angle(Y, beta)\n",
+    "r_1 = Rotation.from_axis_angle((Z, alpha)) @ Rotation.from_axis_angle(Y, beta)\n",
     "r_1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "5678ebb2",
    "metadata": {},
    "outputs": [
@@ -109,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "bae9b3cf",
    "metadata": {},
    "outputs": [
@@ -136,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "e380eecf",
    "metadata": {},
    "outputs": [
@@ -186,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "5e86871f",
    "metadata": {},
    "outputs": [
@@ -245,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "1fc2c6b8",
    "metadata": {},
    "outputs": [
@@ -275,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "6e97ee05",
    "metadata": {},
    "outputs": [
@@ -302,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "85e27633",
    "metadata": {},
    "outputs": [
@@ -351,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "72d8d7fa",
    "metadata": {},
    "outputs": [
@@ -372,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "a38d9157",
    "metadata": {},
    "outputs": [
@@ -394,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "b5efcd7b",
    "metadata": {},
    "outputs": [
@@ -416,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "c2701ae1",
    "metadata": {},
    "outputs": [
@@ -438,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "721219c1",
    "metadata": {},
    "outputs": [
@@ -482,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "52533eac",
    "metadata": {},
    "outputs": [
@@ -517,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "01d6f443",
    "metadata": {},
    "outputs": [
@@ -552,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "c823ebb1",
    "metadata": {},
    "outputs": [
@@ -587,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "id": "9b7e0820",
    "metadata": {},
    "outputs": [
@@ -622,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "id": "d587f82b",
    "metadata": {},
    "outputs": [
@@ -657,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "57e94222",
    "metadata": {},
    "outputs": [
@@ -713,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "id": "03085d12",
    "metadata": {},
    "outputs": [
